2013-03-07  Dirk Schulze  <dschulze@adobe.com>
	Fixed typos in defitnions.