@@ -1,2 +1,6 @@
 2013-03-07  Dirk Schulze  <dschulze@adobe.com>
+	'rotate' and 'rotateBy' should be pure 2D operations.
+	More detailed example for passing DOM string and stringifier.
+
+2013-03-07  Dirk Schulze  <dschulze@adobe.com>
 	Fixed typos in defitnions.
